test/conformance/chainsaw/mutating-policies/existing/same-trigger-target-resource-filters/ns.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: test-mpol-same-trigger-target-1
---
kind: Namespace
apiVersion: v1
metadata:
  name: test-mpol-same-trigger-target-2
